@@ -1849,14 +1849,6 @@
     </tr>
 
     <tr>
-      <td><pre>-audiofirst &lt;1|0&gt;</pre></td>
-      <td>Initialize the audio subsystem before video when emulating a
-        ROM.  This seems to be required when using ATI video cards
-        in OpenGL mode in Windows.  Since it doesn't hurt other
-        systems, the default is 1.</td>
-    </tr>
-
-    <tr>
       <td><pre>-fastscbios &lt;1|0&gt;</pre></td>
       <td>Disable Supercharger BIOS progress loading bars.</td>
     </tr>
